# agente-welcomeAI

./: .gitignore  Dockerfile  README.md  requirements.txt
Downloads/ai-core/ai-core/: .gitignore  Dockerfile  analise_projeto.sh  analise_resultado.txt  api.py  final_check.sh  fix_ai_core_complete.py  pyproject.toml  requirements-lock.txt  run_for_airflow.py  run_producao.sh
Downloads/ai-core/ai-core/docs/: io.md
Downloads/ai-core/ai-core/jobs/: pipeline_completo_job.py
Downloads/ai-core/ai-core/originais/: INSTRUCOES_LEANDRO.txt
Downloads/ai-core/ai-core/src/ai_toolkit/: __init__.py  cli.py  spark_integration.py
Downloads/ai-core/ai-core/src/ai_toolkit/config/: __init__.py  decision.yaml  environment.yaml  global_config.py  model_registry.yaml
Downloads/ai-core/ai-core/src/ai_toolkit/data/: __init__.py  _valida.py  amostragem.py  garante_split.py  limpeza.py  ncm.py  oversample_faixas.py  oversample_ros.py  oversample_smote.py  renomeia.py
Downloads/ai-core/ai-core/src/ai_toolkit/features/: __init__.py  augment.py  encoding.py  split.py  tensor.py  utils.py
Downloads/ai-core/ai-core/src/ai_toolkit/models/: __init__.py  callbacks.py  ensemble.py  predict.py  utils.py
Downloads/ai-core/ai-core/src/ai_toolkit/preditor/: __init__.py  ensembles.py
Downloads/ai-core/ai-core/src/ai_toolkit/preprocessing/: __init__.py  ncm.py  phonetic.py  preprocessing_config.yaml  text.py  tokenizer.py
Downloads/ai-core/ai-core/src/ai_toolkit/registry/: loader.py  (+1 more)
Downloads/ai-core/ai-core/utiliarios/: model.py  prepara_dados.py  prepara_dados_treino.py  treina_modelos.py
(+17 files in other folders)
