[project    "torch>=2.0",
    "pyspark>=2.4",
    "mlflow>=2.0",
    "flask>=2.0",
]
name = "ai_toolkit"
version = "0.1.0"
description = "Transformações e utilidades padronizadas para IA"
authors = [{name = "Equipe IA"}]
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.12",
    "jellyfish>=1.0",
    "pyphonetics>=0.5",
    "tqdm>=4.60",
    "unidecode>=1.3",
    "transformers>=4.30",
    "tensorflow>=2.13",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "scipy>=1.10"
]

[project.optional-dependencies]
train = ["tensorflow>=2.13"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}